
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[pending]]
== Pending

icon:plus[] Elasticsearch: The `branchUuid` property was added to documents in the search index.

[[v1.5.2]]
== 1.5.2 (22.06.2020)

icon:check[] Config: It is now possible to configure the image cache directory path using the `MESH_IMAGE_CACHE_DIRECTORY` environment variable. Fixes link:https://github.com/gentics/mesh/issues/1067[#1067]

icon:check[] Consistency Checks: An empty binary will no longer be considered inconsistent.

icon:check[] REST: Allow field during node field update is now validated strictly in the API. Fixes link:https://github.com/gentics/mesh/issues/975[#975]

icon:check[] Core: Resolving node links to nodes in the same project and branch will now yield relative URLs, as documented.

[[v1.5.1]]
== 1.5.1 (11.05.2020)

icon:check[] Java Rest Client: `MeshRequest#toCompletable()` now throws an exception again when receiving an error from the server.

[[v1.5.0]]
== 1.5.0 (08.05.2020)

icon:plus[] Test: An enhanced test container class has been added. The `MeshContainer` class replaces the `MeshDockerServer` which was deprecated.

icon:plus[] Elasticsearch: It is now possible to define Elasticsearch settings / mappings per language. This helps using language specific stemmers or stop word lists. Please refer to the link:{{< relref "elasticsearch.asciidoc" >}}#language-override[documentation] for more information.

icon:check[] Core: Fixed a bug that caused an internal server error if a project was attempted to be created after any role with permissions to create projects was deleted.

icon:check[] Java Rest Client: The response body is now properly closed when calling `blockingAwait()` on a request.

icon:check[] GraphQL: Errors during GraphQL queries are now correctly propagated to the client.
